Bug 173136 - Kopete fail to start after recent update
Summary: Kopete fail to start after recent update
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.60.1
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 172020 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-10-19 13:26 UTC by egor
Modified: 2015-08-21 19:03 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
report file (3.22 KB, text/plain)
2015-08-21 19:03 UTC, Артем
Details

Note You need to log in before you can comment on or make changes to this bug.
Description egor 2008-10-19 13:26:31 UTC
Version:           unknown (using 4.1.2 (KDE 4.1.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-7-generic

*******:~$ kopete
kopete(7608) Kopete::IdentityManager::load: Created identity  "*********"
kopete(7608) Kopete::AccountManager::setOnlineStatus: category:  2
********:~$ ASSERT: "!newEntry.name.isEmpty()" in file /build/buildd/kdenetwork-4.1.2/kopete/libkopete/kopeteavatarmanager.cpp, line 98

And it closes after that. And one more - i'm unable to find such category and file on my computer.
Comment 1 Oliver Putz 2008-10-19 23:31:02 UTC
Can you run kopete in a gdb session and paste the output here? (open a console, type 'gdb kopete' and after that start the program by typing 'run'. Once kopete is started (and crashed) you can get a backtrace by just typing 'bt all')
Comment 2 egor 2008-10-19 23:51:11 UTC
:~$ gdb kopete
GNU gdb 6.8-debian        
Copyright (C) 2008 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu"...
(no debugging symbols found)
(gdb)
--------------------------------------------------------
and nothing happens
Comment 3 egor 2008-10-19 23:56:12 UTC
Oh, sorry! I get it - i missed "run". Ok...Thats what i have:

:~$ gdb kopete                        
GNU gdb 6.8-debian                                
Copyright (C) 2008 Free Software Foundation, Inc. 
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.           
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"   
and "show warranty" for details.                                             
This GDB was configured as "x86_64-linux-gnu"...                             
(no debugging symbols found)                                                 
(gdb) run                                                                    
Starting program: /usr/bin/kopete                                            
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
(no debugging symbols found)                                                 
---Type <return> to continue, or q <return> to quit---return
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
[Thread debugging using libthread_db enabled]               
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)                                
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
---Type <return> to continue, or q <return> to quit---return
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[New Thread 0x7f72ab3f76f0 (LWP 14125)]
(no debugging symbols found)
(no debugging symbols found)
kopete(14135) Kopete::IdentityManager::load: Created identity  "piU4fw1ih6"
kopete(14135) Kopete::AccountManager::setOnlineStatus: category:  2

Program exited normally.
(gdb) ASSERT: "!newEntry.name.isEmpty()" in file /build/buildd/kdenetwork-4.1.2/kopete/libkopete/kopeteavatarmanager.cpp, line 98
Comment 4 egor 2008-10-19 23:57:12 UTC
And when i type 'bt all' - it says that :~$ bt all
bash: bt: command not found
Comment 5 Roman Jarosz 2008-10-20 11:18:18 UTC
The correct gdb command is 
gdb --args kopete --nofork

and then
run
bt
Comment 6 egor 2008-10-20 15:47:06 UTC
thats what i have

(gdb) bt                                            
#0  0x00007f90a9d59fd5 in raise () from /lib/libc.so.6
#1  0x00007f90a9d5bb43 in abort () from /lib/libc.so.6
#2  0x00007f90ac0d66b5 in qt_message_output () from /usr/lib/libQtCore.so.4
#3  0x00007f90ac0d67fd in qFatal () from /usr/lib/libQtCore.so.4           
#4  0x00007f90ad6ecd58 in Kopete::AvatarManager::add ()                    
   from /usr/lib/libkopete.so.4                                            
#5  0x00007f909a30ca21 in ?? () from /usr/lib/kde4/kopete_jabber.so        
#6  0x00007f909a3128bf in ?? () from /usr/lib/kde4/kopete_jabber.so        
#7  0x00007f909a3181b1 in ?? () from /usr/lib/kde4/kopete_jabber.so        
#8  0x00007f90ac1db134 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#9  0x00007f909a04930e in XMPP::Task::done () from /usr/lib/libiris_kopete.so.1
#10 0x00007f909a027f94 in XMPP::JT_VCard::take ()                              
   from /usr/lib/libiris_kopete.so.1                                           
#11 0x00007f909a049475 in XMPP::Task::take () from /usr/lib/libiris_kopete.so.1
#12 0x00007f909a0007bf in XMPP::Client::distribute ()
   from /usr/lib/libiris_kopete.so.1
#13 0x00007f909a0010a6 in XMPP::Client::streamReadyRead ()
   from /usr/lib/libiris_kopete.so.1
#14 0x00007f9099fafaa5 in XMPP::Client::qt_metacall ()
   from /usr/lib/libiris_kopete.so.1
#15 0x00007f90ac1db134 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0x00007f9099faea4a in XMPP::ClientStream::qt_metacall ()
   from /usr/lib/libiris_kopete.so.1
#17 0x00007f90ac1db134 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#18 0x00007f90ac1e139f in ?? () from /usr/lib/libQtCore.so.4
#19 0x00007f90ac1d5a43 in QObject::event () from /usr/lib/libQtCore.so.4
#20 0x00007f90aaa9fc3d in QApplicationPrivate::notify_helper ()
   from /usr/lib/libQtGui.so.4
#21 0x00007f90aaaa79ea in QApplication::notify () from /usr/lib/libQtGui.so.4
#22 0x00007f90acdadb8b in KApplication::notify () from /usr/lib/libkdeui.so.5
#23 0x00007f90ac1c6d61 in QCoreApplication::notifyInternal ()
   from /usr/lib/libQtCore.so.4
#24 0x00007f90ac1f2ab6 in ?? () from /usr/lib/libQtCore.so.4
#25 0x00007f90ac1ef1fd in ?? () from /usr/lib/libQtCore.so.4
#26 0x00007f90a6e19d4b in g_main_context_dispatch ()
---Type <return> to continue, or q <return> to quit---return
   from /usr/lib/libglib-2.0.so.0
#27 0x00007f90a6e1d51d in ?? () from /usr/lib/libglib-2.0.so.0
#28 0x00007f90a6e1d6db in g_main_context_iteration ()
   from /usr/lib/libglib-2.0.so.0
#29 0x00007f90ac1ef15f in QEventDispatcherGlib::processEvents ()
   from /usr/lib/libQtCore.so.4
#30 0x00007f90aab31a9f in ?? () from /usr/lib/libQtGui.so.4
#31 0x00007f90ac1c5682 in QEventLoop::processEvents ()
   from /usr/lib/libQtCore.so.4
#32 0x00007f90ac1c580d in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#33 0x00007f90ac1c7cbd in QCoreApplication::exec ()
   from /usr/lib/libQtCore.so.4
#34 0x0000000000448ddc in _start ()
(gdb)

Comment 7 Roman Jarosz 2008-10-24 21:45:02 UTC
SVN commit 875550 by rjarosz:

Don't put avatar into avatar manager if contactId is empty.

BUG: 173136



 M  +15 -13    jabberbasecontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=875550
Comment 8 Roman Jarosz 2008-10-24 21:45:50 UTC
SVN commit 875552 by rjarosz:

Backport commit 875550.
Don't put avatar into avatar manager if contactId is empty.

CCBUG: 173136



 M  +15 -12    jabberbasecontact.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=875552
Comment 9 Roman Jarosz 2008-10-24 21:52:24 UTC
It crashes because you have added contact with empty Jabber ID into your contact list. With the above commit it won't crash anymore. Also if you remove that contact with older Kopete or other client you should be fine too.

The question is if Kopete should allow user to add contact with empty Jabber ID?
Comment 10 egor 2008-10-25 03:38:23 UTC
(In reply to comment #9)
> It crashes because you have added contact with empty Jabber ID into your
> contact list. With the above commit it won't crash anymore. Also if you remove
> that contact with older Kopete or other client you should be fine too.


How should i know, which contact is causing this problem, and how can i delete it? 

And how fast there will be a fix for this bug?

Comment 11 Matt Rogers 2008-10-25 06:04:05 UTC
the fix is in KDE 4.1.3
Comment 12 Roman Jarosz 2008-10-25 10:39:36 UTC
It's the contact without Jabber ID (without xxxx@jabber.cz), you can see the ids in tooltip in contact list so there will be one contact without it (probably an offline contact)
Comment 13 egor 2008-10-25 15:57:19 UTC
First - how can i see contact list, if i cann't start Kopete? 
Second - Most of my contacts don't have this ids, i think, 'cause they are ICQs contacts. But it worked fine until last time...
Comment 14 egor 2008-10-25 15:59:42 UTC
You said that fix is in KDE 4.1.3. Is it available to install? Because i just have upgraded from reps, and version of KDE is still 4.1.2.
Comment 15 Roman Jarosz 2008-10-25 16:24:55 UTC
KDE 4.1.3 should be officially released in 11 days. As I said to remove empty Jabber contact (no ICQ or any other) you have to use older Kopete version or other client (e.g. http://www.meebo.com/)
Comment 16 Dario Andres 2008-12-14 18:08:21 UTC
*** Bug 172020 has been marked as a duplicate of this bug. ***
Comment 17 Артем 2015-08-21 19:03:06 UTC
Created attachment 94154 [details]
report file