Don't put avatar into avatar manager if contactId is empty.

BUG: 173136


svn path=/trunk/KDE/kdenetwork/kopete/; revision=875550